<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.sanchit.taskmanagment.MyPreference
        android:key="pref_max_volume"
        android:layout="@layout/preference_widget_account_details"
        android:title="Max" />
    <PreferenceCategory
        android:title="General"
        >
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_theme_list_titles"
        android:entryValues="@array/pref_theme_list_values"
        android:key="theme_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_theme" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="reminders_enabled"
        android:summary="@string/display_reminder_notifications_settings_subtitle"
        android:title="@string/display_reminder_notifications_settings" />
    </PreferenceCategory>
</PreferenceScreen>
