<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TodoDetailsActivity"
    tools:showIn="@layout/activity_todo_details">


    <RelativeLayout
        android:id="@+id/reminderParent"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/myBoxColor"
        android:elevation="4dp"
        android:padding="@dimen/taskitem_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTitleCheckBox">


        <ImageView
            android:id="@+id/deleteReminderImageView"
            android:layout_width="37dp"
            android:layout_height="22dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/icon_trash"
            android:contentDescription="@string/deleteReminderImageDescription"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="29dp"
            android:layout_centerVertical="true"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm"
            android:contentDescription="@string/alarmclockImageDescription" />

        <TextView
            android:id="@+id/reminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="62dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/remind_me_text"
            android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/topTitleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/myBoxColor"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:elevation="4dp"
        android:padding="@dimen/taskitem_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioGroup
            android:id="@+id/radio_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />
        </RadioGroup>
        <EditText
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scrollHorizontally="true"
            android:layout_marginStart="64dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:inputType="text"
            android:textSize="21sp"
            android:hint="@string/taskNameHint" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noteBlock"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/myBoxColor"
        android:elevation="4dp"
        android:padding="@dimen/taskitem_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shipper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/note_EditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="@string/add_a_note"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:padding="15dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/view_foreground" />
    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/delete_task"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:tint="@color/darkBackgroundBox"
            app:srcCompat="@drawable/icon_trash"
            android:contentDescription="@string/deleteTaskImageDescription" />

        <TextView
            android:id="@+id/timeAgoTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/temp_x_time_ago"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>